# rlbot_ws

./: .gitignore  NOTES.md  README.md  full_setup.bash  full_setup.sh
docs/: silly_notes.txt
setup/: python_req.txt
src/plotter/: package.xml  setup.cfg  setup.py
src/plotter/plotter/: PlotterNode.py
src/rlbot_bridge_pkg/: package.xml  setup.cfg  setup.py
src/rlbot_bridge_pkg/launch/: agent_launch.py  control_launch.py  simple_test_launch.py
src/rlbot_bridge_pkg/rlbot_bridge_pkg/: AgentNode.py  rlbot.cfg
src/rlbot_bridge_pkg/rlbot_bridge_pkg/src/: bot.cfg  bot.py
src/rlbot_bridge_pkg/testing_scripts/: reset_game.py  rlbot_tester.py  set_gains.py
src/rlbot_msgs/: CMakeLists.txt  CMakeLists2.txt  package.xml  package2.xml
src/rlbot_msgs/action/: ControlVelocity.action
src/rlbot_msgs/msg/: ControllerReference.msg  PIDGains.msg  Polynomial3.msg  RigidBodyTick.msg  State.msg  TrajectoryReference.msg
src/rlbot_msgs/srv/: GetOptimalTrajectory.srv  ResetGameState.srv  SetGains.srv  TwistSetpoint.srv
src/simple_controller_pkg/: package.xml  setup.cfg  setup.py
src/simple_controller_pkg/simple_controller_pkg/: LatencyTestNode.py  ReferenceGeneratorNode.py  SimpleControllerNode.py  StanleyControllerNode.py  casadi_curve_fit.py  casadi_min_dist_to_curve.py  casadi_spline.py  controller_util.py
src/trajectory_generator_pkg/: package.xml  setup.cfg  setup.py
src/trajectory_generator_pkg/trajectory_generator_pkg/: TrajectoryGeneratorNode.py  paper_trajectory_generator.py  sample_trajectory_generator.py
(+3 files in other folders)
